--- a/week1_project.ipynb
+++ b/week1_project.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyN712SqCKtbMZ/vBQG+SiDz",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +15,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Meghana2610-48/week1_project.ipynb/blob/main/week1_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -493,7 +481,7 @@
         "id": "91sEJQuNHjPL",
         "outputId": "45acb52d-46fd-48eb-e0e9-ddc8d1f3c2cd"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +531,7 @@
         "id": "W2H2Fhz7HmDD",
         "outputId": "c497a1c7-203c-42fd-a469-fcc608cc3a7e"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1162,7 +1150,7 @@
         "id": "X1Hl5-TOHzSw",
         "outputId": "42d7b374-6ab2-4e34-d312-5e148dcfdd88"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
