--- a/week1_project.ipynb
+++ b/week1_project.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNATsjPHfZWALsK4wqxgnhp",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Meghana2610-48/week1_project.ipynb/blob/main/week1_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
@@ -449,10 +461,10 @@
         }
       ],
       "source": [
-        "# ========================\n",
+        "\n",
         "# Week 1 Project - Climate Risk and Disaster Management\n",
         "# Exploratory Data Analysis of FEMA Disaster Declarations\n",
-        "# ========================\n",
+        "\n",
         "\n",
         "# Step 1: Import Necessary Libraries\n",
         "import pandas as pd\n",
@@ -461,7 +473,6 @@
         "import seaborn as sns\n",
         "\n",
         "# Step 2: Load the Dataset\n",
-        "# Make sure to upload your dataset file (disaster_declarations_summaries.csv) in Google Colab\n",
         "df = pd.read_csv(\"/content/DisasterDeclarationsSummaries.csv\")\n",
         "\n",
         "# Show first 5 rows\n",
